--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
     "pymupdf>=1.26.1",
     "pymupdf4llm>=0.0.25",
     "sentence-transformers==5.0.0",
-    "transportations_library==0.1.4",
+    "transportations_library>=0.1.5",
     "python-dotenv==1.1.1",
     "chromadb==1.0.15",
 ]
