--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ packages = ["hcm_mcp_server"]
 
 [tool.ruff]
 line-length = 120
-target-version = ["py312"]
+target-version = "py312"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
