--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "fastapi-mcp==0.3.6",
     "langchain==0.3.26",
     "mcp[cli]==1.11.0",
+    "torch>=2.5.1",
     "numpy>=2.2.4",
     "pymupdf>=1.26.1",
     "pymupdf4llm>=0.0.25",
@@ -44,6 +45,11 @@ dev = [
     "types-setuptools>=75.8.2.20250305",
     "pytest>=8.3.5"
 ]
+
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
 
 [project.urls]
 Homepage = "https://github.com/crosstraffic/highway-capacity-manual-mcp"
