--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     repo: https://github.com/crosstraffic/highway-capacity-manual-mcp
     region: oregon
     plan: free
-    branch: main
+    branch: api
     buildCommand: |
       export CARGO_HOME=/tmp/cargo
       export CARGO_TARGET_DIR=/tmp/target
