--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ HOST=127.0.0.1
 PORT=8000
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
 LOG_LEVEL=INFO
+DB_MODE=local
+PUBLIC_SUPABASE_URL=https://
+PUBLIC_SUPABASE_API=your-anon-key / service-role-key
