--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "transportations_library>=0.1.5",
     "python-dotenv==1.1.1",
     "chromadb==1.0.15",
+    "supabase==2.18.0",
 ]
 
 [dependency-groups]
